# modbus_info

./: .gitignore  AUTHENTICATION_GUIDE.md  AUTH_IMPLEMENTATION_SUMMARY.md  CHANGELOG.md  CHANGELOG_AUTH.md  CHANGELOG_OFFICIAL_API.md  GRADIO_IMPLEMENTATION.md  INSTALL.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICKSTART_AUTH.md  README.md  README_UPDATE.md  UI_README.md  WEB_API_DEBUG.md  app.py  config.example  example.py  main.py  manage_users.py  pyproject.toml  quick_start.md  requirements.txt  rules.md  rules2.md  run_ui.py  start_file_server.py  test_auth.py  test_official_api.py  test_web_api.py  verify_setup.py  启动PDF解析服务.bat  启动UI界面.bat  演示鉴权功能.bat  鉴权功能说明.txt  鉴权功能验收清单.md
config/: AUTH_README.md  README_API_CONFIG.md  auth.json  dev_mapping.json  dev_mapping.json.bak  dev_mapping_new.json  modbus_extract.md  point_metadata.json
docs/: OFFICIAL_API_GUIDE.md
src/: __init__.py  ai_extractor.py  config.py  csv_exporter.py  pdf_parser.py  pipeline.py
